--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,7 +164,7 @@ header .btn-danger {
 
 }
 #menuOverlay ul li a {
-  font-size: .9rem;
+  font-size: 1.2rem;
   margin-bottom: 0.6em;
   color: #fff;
 }
